# builditron

./: .gitignore  .gitmodules  AGENTS.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg-configuration.json  vcpkg.json
code/: CMakeLists.txt  README.md
code/cmake/: BuildHostTools.cmake  ConfigureHostTools.cmake
code/samples/: CMakeLists.txt  README.md
code/samples/assets/: .gitignore
code/samples/direct/: CMakeLists.txt
code/samples/direct/android-sample/: .gitignore  Makefile  settings.gradle.kts
code/samples/direct/android-sample/app/: build.gradle.kts
code/samples/direct/android-sample/app/src/main/: AndroidManifest.xml
code/samples/direct/android-sample/gradle/: libs.versions.toml
code/samples/direct/ios-sample/: .gitignore  README.md  Workspace.swift
code/samples/direct/ios-sample/Tuist/ProjectDescriptionHelpers/: IosSampleProject.swift
code/samples/direct/ios-sample/ios-sample/: ContentView.swift  MapitronApp.swift
code/samples/direct/ios-sample/ios-sample-device/: .gitignore  Project.swift
code/samples/direct/ios-sample/ios-sample-device/Derived/Sources/: TuistAssets+IosSampleDevice.swift  TuistAssets+IosSampleIphoneos.swift  TuistBundle+IosSampleDevice.swift  TuistBundle+IosSampleIphoneos.swift
code/samples/direct/ios-sample/ios-sample-simulator/: .gitignore  Project.swift
code/samples/direct/ios-sample/ios-sample-simulator/Derived/Sources/: TuistAssets+IosSampleIphonesimulator.swift  TuistAssets+IosSampleSimulator.swift  TuistBundle+IosSampleIphonesimulator.swift  TuistBundle+IosSampleSimulator.swift
code/samples/direct/macos-sample/: CMakeLists.txt  README.md
code/samples/direct/macos-sample/cpp/macos_sample/: main.cpp
code/samples/direct/windows-sample/: CMakeLists.txt  README.md
code/samples/ios-sample/: README.md
code/samples/ios-sample/ios-sample/: MapitronBridge.swift
code/samples/ios-sample/ios-sample.xcodeproj/: project.pbxproj
code/samples/ios-sample/ios-sample.xcodeproj/project.xcworkspace/xcuserdata/nathan.stouffer.xcuserdatad/: UserInterfaceState.xcuserstate
code/samples/ios-sample/ios-sample.xcodeproj/xcshareddata/xcschemes/: ios-sample.xcscheme
code/samples/ios-sample/ios-sample.xcodeproj/xcuserdata/nathan.stouffer.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
code/samples/ios-sample/ios-sample.xcodeproj/xcuserdata/nathan.stouffer.xcuserdatad/xcschemes/: xcschememanagement.plist
code/samples/macos-sample/: CMakeLists.txt  README.md
code/samples/macos-sample/cpp/macos_sample/: main.cpp
code/samples/package/android-sample/: .gitignore  Makefile  settings.gradle.kts
code/samples/package/android-sample/app/: build.gradle.kts
code/samples/package/ios-sample/: .gitignore  Project.swift  README.md
code/samples/package/ios-sample/Derived/Sources/: TuistAssets+IosSample.swift  TuistBundle+IosSample.swift
code/samples/package/ios-sample/ios-sample/: ContentView.swift
code/samples/package/ios-sample/ios-sample.xcodeproj/: project.pbxproj
code/samples/package/ios-sample/ios-sample.xcodeproj/xcshareddata/xcschemes/: ios-sample.xcscheme
code/samples/package/web-sample/: package-lock.json  package.json
code/samples/package/web-sample/src/: mapitron.test.ts  style.css
code/samples/web-sample/: .gitignore  GETTING_STARTED.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
code/samples/web-sample/src/: main.ts  mapitron.test.ts
code/samples/web-sample/src/wasm/: .gitkeep
code/samples/windows-sample/: CMakeLists.txt  README.md
code/samples/windows-sample/cpp/windows_sample/: main.cpp
code/src/: CMakeLists.txt  README.md
code/src/engine/: CMakeLists.txt
code/src/engine/cpp/engine/: brain.cpp
code/src/engine/cpp/engine/caching/: tile_cache.cpp
code/src/engine/cpp/engine/rendering/: program.cpp
code/src/engine/include/public/engine/: brain.hpp
code/src/mapitron/: CMakeLists.txt
code/src/mapitron/cpp/bindings/: embind.cpp  jnibind.cpp
code/src/mapitron/cpp/mapitron/: mapitron.cpp
code/src/mapitron/include/public/: module.modulemap
code/src/mapitron/include/public/mapitron/: mapitron.hpp
code/src/mapitron/kotlin/com/mapitron/: Mapitron.kt
code/src/onyx/: CMakeLists.txt
code/src/onyx/cpp/onyx/: onyx.cpp
code/src/onyx/include/public/onyx/: onyx.hpp
code/src/shaderblobs/: CMakeLists.txt
code/src/shaderblobs/cpp/shaderblobs/: load.cpp
code/src/shaderblobs/include/public/shaderblobs/: load.hpp
code/src/shaders/: CMakeLists.txt
code/src/shaders/assets/shaders/handwritten/: Fog.fs.sc  Fog.vs.sc
code/src/shaders/cpp/shaders/: generate.cpp  load.cpp
code/src/shaders/include/public/shaders/: generate.hpp  load.hpp
code/src/styling/: CMakeLists.txt
code/src/styling/cpp/styling/parse/: layer_json.cpp
code/src/tools/shadertron/cpp/shadertron/: main.cpp
code/src/viewer/: CMakeLists.txt
code/src/viewer/engine/: CMakeLists.txt
code/src/viewer/engine/cpp/engine/: brain.cpp
code/src/viewer/onyx/: CMakeLists.txt
code/src/viewer/onyx/cpp/onyx/: onyx.cpp
code/src/viewer/styling/: CMakeLists.txt
code/tests/: CMakeLists.txt  README.md
code/tests/engine/: CMakeLists.txt
code/tests/engine/cpp/engine/caching/: tile_cache_tests.cpp
code/tests/lucid/: CMakeLists.txt
code/tests/lucid/cpp/lucid/: scalar_tests.cpp
code/tests/mapitron/: CMakeLists.txt
code/tests/mapitron/cpp/mapitron/: mapitron_tests.cpp
code/tests/onyx/: CMakeLists.txt
code/tests/onyx/cpp/onyx/: onyx_tests.cpp
code/tests/render/: CMakeLists.txt
code/tests/render/assets/golden-img/: line_layer_render_test.txt
code/tests/render/cpp/render/: line_layer_render_test.cpp
code/tests/shaderblobs/: CMakeLists.txt
code/tests/shaderblobs/cpp/shaderblobs/: load_tests.cpp
code/tests/shaders/: CMakeLists.txt
code/tests/shaders/cpp/shaders/: load_tests.cpp
code/tests/styling/: CMakeLists.txt
code/tests/styling/cpp/styling/parse/: layer_json_tests.cpp
code/tools/: CMakeLists.txt
code/tools/shadertron/: CMakeLists.txt  README.md
code/tools/shadertron/cpp/shadertron/: main.cpp
presets/: base.json  dest-android.json  (+10 more)
(+27 files in other folders)
